<resources>
    <string name="app_name">Spe Suez</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="swap_units">Swap units</string>

    <!-- 0 unit value, 1 unit name -->
    <string name="from_value_content_description">From: %1$s %2$s.</string>
    <!-- 0 unit value, 1 unit name -->
    <string name="to_value_content_description">To: %1$s %2$s.</string>

    <string name="temperature">Temperature</string>
    <string name="mass">Weight/Mass</string>
    <string name="volume">Volume</string>
    <string name="energy">Energy</string>
    <string name="length">Length</string>
    <string name="miles">miles</string>
    <string name="kilometres">kilometres</string>
    <string name="metres">metres</string>
    <string name="centimetres">centimetres</string>
    <string name="inches">inches</string>
    <string name="feet">feet</string>
    <string name="yards">yards</string>
    <string name="grams">grams</string>
    <string name="kilograms">kilograms</string>
    <string name="ounces">ounces</string>
    <string name="stone">stone</string>
    <string name="pounds">pounds</string>
    <string name="celsius">celsius</string>
    <string name="fahrenheit">fahrenheit</string>
    <string name="litres">litres</string>
    <string name="millilitres">millilitres</string>
    <string name="fluid_ounces">fl. ounces</string>
    <string name="cups">cups</string>
    <string name="pints">pints</string>
    <string name="gallons">gallons</string>
    <string name="kilocalories">Calories</string>
    <string name="kilojoules">kilojoules</string>

    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_dec_description">decimal point</string>
    <string name="key_clr">C</string>
    <string name="key_clr_description">clear</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_my_main">MyMainActivity</string>
    <string name="booki">SPE</string>
    <string name="welcome_back">Welcome</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_all">Total Evaluation</string>
    <string name="title_home">Tasks</string>
    <string name="title_dashboard">Meetings</string>
    <string name="title_notifications">Positive Notes</string>
    <string name="Negative_notes">Negative Notes</string>
    <string-array name="monthes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="title_activity_galllery">GallleryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
